# Papi-s-pet

./: .dockerignore  .gitignore  Readme.md  main.py  pyproject.toml
app/: config.py  main.py
app/db/: cache_manager.py  cost_logger.py  database.py  session_manager.py
app/guardrails/: input_guard.py  output_guard.py  retrieval_guard.py
app/llm/: chain.py  gemini_client.py
app/monitoring/: budget.py  rate_limiter.py
app/rag/: loader.py  reranker.py  router.py  vectorstore.py
app/static/: index.html  styles.css
app/utils/: embedding_utils.py  fallbacks.py  logger.py
data/db/: papis_pet.db
data/source/: education.md  experience.md  profile.yaml  projects.md  skills.yaml
tests/: conftest.py  test_input_guard.py  test_output_guard.py  test_rate_limiter.py
